--- a/client/src/custom.scss
+++ b/client/src/custom.scss
@@ -142,6 +142,10 @@ label {
   margin: 0 auto;
 }
 
+.recipe-title {
+  margin-bottom: $gap/4 * 3;
+}
+
 .pre-scrollable {
   max-height: 1000px;
   overflow-y: scroll;
@@ -152,6 +156,10 @@ label {
   border-radius: 10px;
   -webkit-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.15);
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  object-fit: cover;
 }
 
 .page-wrapper {
@@ -228,6 +236,8 @@ label {
   font-size: 12px;
   line-height: 1.428571429;
   border-radius: 15px;
+  float: right;
+  margin-left: 10px;
 }
 
 .img_text {
@@ -272,10 +282,8 @@ label {
 
 .recipe_btn_content {
   float: left;
-  height: 100%;
-  width: 88%;
-  margin-left: 10px;
   margin-top: 20px;
+  width: 100%;
 }
 
 .macro_panel {
@@ -298,12 +306,6 @@ label {
 
 .green_star {
   color: LimeGreen;
-}
-
-.recipe_img {
-  width: 250px;
-  height: 250px;
-  object-fit: cover;
 }
 
 .planner_img {
